--- a/config/sync/core.menu.static_menu_link_overrides.yml
+++ b/config/sync/core.menu.static_menu_link_overrides.yml
@@ -1,3 +1,9 @@
 _core:
   default_config_hash: jdY7AU0tU-QsjmiOw3W8vwpYMb-By--_MSFgbqKUTYM
-definitions: {  }
+definitions:
+  openapi__downloads:
+    enabled: false
+    menu_name: admin
+    parent: system.admin_config_services
+    expanded: false
+    weight: 0
