--- a/config/sync/rest.resource.entity.commerce_product_variation.yml
+++ b/config/sync/rest.resource.entity.commerce_product_variation.yml
@@ -1,22 +1,19 @@
-uuid: d31d15b8-e273-4f59-8aad-6c3a5f38efa9
+uuid: 6a25fde0-04a5-4a92-b834-35148ba8f974
 langcode: en
 status: true
 dependencies:
   module:
-    - commerce_order
+    - commerce_product
     - serialization
     - user
-id: entity.commerce_order
-plugin_id: 'entity:commerce_order'
+id: entity.commerce_product_variation
+plugin_id: 'entity:commerce_product_variation'
 granularity: resource
 configuration:
   methods:
     - GET
     - POST
-    - DELETE
-    - PATCH
   formats:
     - json
-    - xml
   authentication:
     - cookie
