--- a/config/sync/rest.resource.entity.commerce_promotion_coupon.yml
+++ b/config/sync/rest.resource.entity.commerce_promotion_coupon.yml
@@ -1,22 +1,20 @@
-uuid: d31d15b8-e273-4f59-8aad-6c3a5f38efa9
+uuid: fe858778-9f8b-42cd-866a-420e16d779bd
 langcode: en
 status: true
 dependencies:
   module:
-    - commerce_order
+    - commerce_promotion
     - serialization
     - user
-id: entity.commerce_order
-plugin_id: 'entity:commerce_order'
+id: entity.commerce_promotion_coupon
+plugin_id: 'entity:commerce_promotion_coupon'
 granularity: resource
 configuration:
   methods:
     - GET
     - POST
     - DELETE
-    - PATCH
   formats:
     - json
-    - xml
   authentication:
     - cookie
