--- a/config/sync/rest.resource.entity.commerce_store.yml
+++ b/config/sync/rest.resource.entity.commerce_store.yml
@@ -1,22 +1,18 @@
-uuid: d31d15b8-e273-4f59-8aad-6c3a5f38efa9
+uuid: b23bbb8b-f16c-4a2f-b10a-afd3d99ab35a
 langcode: en
 status: true
 dependencies:
   module:
-    - commerce_order
+    - commerce_store
     - serialization
     - user
-id: entity.commerce_order
-plugin_id: 'entity:commerce_order'
+id: entity.commerce_store
+plugin_id: 'entity:commerce_store'
 granularity: resource
 configuration:
   methods:
     - GET
-    - POST
-    - DELETE
-    - PATCH
   formats:
     - json
-    - xml
   authentication:
     - cookie
