--- a/config/sync/rest.resource.entity.user.yml
+++ b/config/sync/rest.resource.entity.user.yml
@@ -1,22 +1,19 @@
-uuid: d31d15b8-e273-4f59-8aad-6c3a5f38efa9
+uuid: 22101339-fb61-43c3-b6fe-a5e6efac0828
 langcode: en
 status: true
 dependencies:
   module:
-    - commerce_order
     - serialization
     - user
-id: entity.commerce_order
-plugin_id: 'entity:commerce_order'
+id: entity.user
+plugin_id: 'entity:user'
 granularity: resource
 configuration:
   methods:
     - GET
     - POST
     - DELETE
-    - PATCH
   formats:
     - json
-    - xml
   authentication:
     - cookie
